--- a/12_optimize_efficiency/package.json
+++ b/12_optimize_efficiency/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "bash build.sh",
     "build:jscomp": "webpack --config webpack.jscompress.config.js",
     "build:terser": "webpack --config webpack.terser-opts.config.js",
     "build:css": "webpack --config webpack.css.config.js",
